login and logout for both portals and register completed

--- a/views/adminPortal.ejs
+++ b/views/adminPortal.ejs
@@ -8,6 +8,7 @@
     
     <a href="/addBooks">Add Books</a>
     <a href="/removeBooks">Remove Books</a>
+    <a href="/logout">Logout</a>
     
 </body>
 </html>
