--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,12 +3,14 @@
 <head>
     <title>Home Page</title>
 </head>
-<body>
+<body> 
     <h1>Welcome to the Home Page</h1>
+
+  
     
     <a href="/loginCustomerPage">Login Customer</a>
     <a href="/registerCustomerPage">Register Customer</a>
-
+    <a href="/loginAdminPage">Login Admin</a>
     <script src="/main-bundled.js"></script>
 </body>
 </html>
