We can add multiple copies of books.Also the database can identify if a similar book was added

--- a/views/adminPortal.ejs
+++ b/views/adminPortal.ejs
@@ -6,6 +6,10 @@
 <body>
     <h1>Welcome to the Admin Portal</h1>
     
+    <% success.forEach(function(message) { %>
+        <p><%= message %>. This is a flash message,needs to be modified with CSS</p>
+    <%}) %>
+
     <a href="/addBooks">Add Books</a>
     <a href="/removeBooks">Remove Books</a>
     <a href="/logout">Logout</a>
