--- a/views/addBooks.ejs
+++ b/views/addBooks.ejs
@@ -11,11 +11,11 @@
     <label for="author">Author:</label>
     <input type="text" id="author" name="author" required><br><br>
 
-    <label for="isbn">ISBN:</label>
-    <input type="text" id="isbn" name="isbn" required><br><br>
-
     <label for="year">Publication Year:</label>
     <input type="number" id="year" name="year" required><br><br>
+
+    <label for="copies">Number of Copies:</label>
+    <input type="number" id="copies" name="copies" value="1" min="1"><br><br>
 
     <input type="submit" value="Submit">
 </form>
