--- a/views/registerCustomer.ejs
+++ b/views/registerCustomer.ejs
@@ -1,29 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Customer Page</title>
+    <link rel="stylesheet" href="registercustomer.css">
 </head>
+
 <body>
 
-    <% errors.forEach(function(message) { %>
-        <p><%= message %>. This is a flash message,needs to be modified with CSS</p>
-    <%}) %>
+    <!-- Flash Messages -->
+    <div class="flash-messages">
+        <% errors.forEach(function(message) { %>
+            <p class="flash-message">
+                <%= message %>. This is a flash message, needs to be modified with CSS
+            </p>
+            <% }) %>
+    </div>
 
-<form action="/registerCustomer" method="POST">
+    <!-- Registration Form -->
+    <div class="register-container">
+        <h1>Customer Registration</h1>
+        <form action="/registerCustomer" method="POST">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
 
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required><br><br>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
 
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-    
-    
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required><br><br>
-    
-    <input type="submit" value="Register">
-</form>
+            <div class="form-group">
+                <input type="submit" value="Register">
+            </div>
+        </form>
+    </div>
 
 </body>
+
 </html>
