--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,8 @@
     <a href="/registerCustomerPage">Register Customer</a>
     <a href="/loginAdminPage">Login Admin</a>
 
-    <!-- JavaScript for Parallax Cursor -->
+    
+     JavaScript for Parallax Cursor
     <script>
         // Create the custom cursor element
         const cursor = document.createElement('div');
@@ -39,8 +40,6 @@
         });
     </script>
 
+
     <!-- footer begins -->
     <%- include('includes/footer') %>
-</body>
-
-</html> 
