--- a/views/loginAdmin.ejs
+++ b/views/loginAdmin.ejs
@@ -21,7 +21,7 @@
 
     <!-- Login Form -->
     <div class="login-container">
-        <h1>Customer Login</h1>
+        <h1>Admin Login</h1>
         <form action="/loginAdmin" method="POST">
             <div class="form-group">
                 <label for="username">Username:</label>
