--- a/views/userPortal.ejs
+++ b/views/userPortal.ejs
@@ -6,5 +6,8 @@
 <body>
     <h1>Welcome to the <%= user.username %> Portal</h1>
     <a href="/logout">Logout</a>
-</body>
-</html>
+    <div class="search-icon">
+        <i class="fas fa-search"></i>
+    </div>
+<!-- footer begins -->
+<%- include('includes/footer') %>
