Umer, have a look into this, i explain the code structure to get reservation data from database and showcase it in EJS file.

--- a/views/adminPortal.ejs
+++ b/views/adminPortal.ejs
@@ -21,5 +21,7 @@
     <div class="search-icon">
         <i class="fas fa-search"></i>
     </div>
+
+    <!-- Umer, over here you create a "a" tag which would send a get request to server(using href), after that go to router line 99  -->
 <!-- footer begins -->
 <%- include('includes/footer') %>
