--- a/views/adminPortal.ejs
+++ b/views/adminPortal.ejs
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Admin Portal</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="adminportal.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <h1>Welcome to the Admin Portal</h1>
-    
+
     <% success.forEach(function(message) { %>
-        <p><%= message %>. This is a flash message,needs to be modified with CSS</p>
-    <%}) %>
+        <p>
+            <%= message %>. This is a flash message,needs to be modified with CSS
+        </p>
+        <%}) %>
 
-    <% errors.forEach(function(message) { %>
-        <p><%= message %>. This is a flash message,needs to be modified with CSS</p>
-    <%}) %>
+            <% errors.forEach(function(message) { %>
+                <p>
+                    <%= message %>. This is a flash message,needs to be modified with CSS
+                </p>
+                <%}) %>
 
-    <a href="/addBooks">Add Books</a>
-    <a href="/logout">Logout</a>
-    <div class="search-icon">
-        <i class="fas fa-search"></i>
-    </div>
-
-    <!-- Umer, over here you create a "a" tag which would send a get request to server(using href), after that go to router line 99  -->
-<!-- footer begins -->
-<%- include('includes/footer') %>
+                    <a href="/addBooks">Add Books</a>
+                    <a href="/logout">Logout</a>
+                    <div class="search-icon">
+                        <i class="fas fa-search"></i>
+                    </div>
+                    <a href="/showReservations" class="btn">Show Reservations</a>
+                    <!-- Umer, over here you create a "a" tag which would send a get request to server(using href), after that go to router line 99  -->
+                    <!-- footer begins -->
+                    <%- include('includes/footer') %>
