code that satisfies my database

--- a/views/borrowerDetails.ejs
+++ b/views/borrowerDetails.ejs
@@ -43,7 +43,7 @@
                     <%= reservation.return_date %>
                 </td>
                 <td>
-                    <%= reservation.due_date %>
+                    <%= reservation.returned_at %>
                 </td>
             </tr>
             <% }) %>
