Done with interface where user comes to collect or return the book. Now need to work on user to be able to cancel a reservation

--- a/views/userReservationDetails.ejs
+++ b/views/userReservationDetails.ejs
@@ -14,5 +14,6 @@
         <p>COLLECTION DATE DEADLINE:<%= reservation.collect_date_deadline %></p>
         <p>TITLE OF BOOK<a href ="/book/<%=reservation.book_id%>" ><%= reservation.title %></a></p>
         <p>AUTHOR OF BOOK<%= reservation.author %></p>
+        <a>Cancel Reservation</a>
     <% }); %>
 </div>
