--- a/views/borrowerDetails.ejs
+++ b/views/borrowerDetails.ejs
@@ -8,6 +8,13 @@
 
 <body>
 <h1>Reservation Details</h1>
+<div class="search-icon">
+    <i class="fas fa-search"></i>
+</div>
+
+<!-- We used axios, so couldnt do res.render from front end so thats why manually creating
+     a flash message-->
+     <div id="flash-message" class="flash-message"></div>
 
 <table>
     <thead>
@@ -17,8 +24,9 @@
             <th>Status</th>
             <th>Reserve Date</th>
             <th>Collect Date</th>
-            <th>Return Date</th>
+            <th>Returned At</th>
             <th>Due Date</th>
+            <th>Collect date deadline</th>
         </tr>
     </thead>
     <tbody>
@@ -30,27 +38,41 @@
                 <td>
                     <%= reservation.book_title %>
                 </td>
-                <td>
+                <td class="status" data-number="<%= reservation.reservation_id %>">
                     <%= reservation.status %>
                 </td>
-                <td>
+                <td >
                     <%= reservation.reserve_date %>
                 </td>
                 <td>
                     <%= reservation.collect_date %>
+                    <!-- Click this button if User has collected a book -->
+                    <!--
+                    <form action="/collect/<%= reservation.reservation_id %>" method="GET">
+                        <button type="submit">Collect</button>
+                    </form> 
+                    -->
+                    <% if (reservation.collect_date == null) { %>
+                    <button class="collect" data-number="<%= reservation.reservation_id %>">Collect</button>
+                    <% } %>                
                 </td>
-                <td>
-                    <%= reservation.return_date %>
-                </td>
-                <td>
+                <td class="returned-at" data-number="<%= reservation.reservation_id %>">
                     <%= reservation.returned_at %>
                 </td>
+                <td class="return-date" data-number="<%= reservation.reservation_id %>">
+                    <%= reservation.return_date %>
+                    <% if(reservation.returned_at == null) { %>
+                        <button class="return" data-number="<%= reservation.reservation_id %>">Returned?</button>
+                    <% } %>
+
+                </td>
+                <td>
+                    <%= reservation.collect_date_deadline %>
+                <td>
             </tr>
             <% }) %>
     </tbody>
 </table>
 
     <a href="/adminPortal" class="btn">Back to Admin Portal</a>
-</body>
-
-</html>
+    <%- include('includes/footer') %>
