--- a/views/userPortal.ejs
+++ b/views/userPortal.ejs
@@ -3,6 +3,8 @@
 <head>
     <title>User Portal</title>
     <link rel="stylesheet" type="text/css" href="userPortal.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <!-- We used axios, so couldnt do res.render from front end so thats why manually creating
