--- a/views/adminPortal.ejs
+++ b/views/adminPortal.ejs
@@ -31,7 +31,7 @@
                     </div>
                     <a href="/showReservations" class="btn">Show Reservations</a>
                     <!--a button here which sends a get request to showCompleted reservation, then we go to ROUTER-->
-                    <a href="/showBadAndCompletedReservations" class="btn">Show Completed Reservations</a>
+                    <!-- <a href="/showBadAndCompletedReservations" class="btn">Show Completed Reservations</a> -->
 
                     <!-- Umer, over here you create a "a" tag which would send a get request to server(using href), after that go to router line 99  -->
                     <!-- footer begins -->
