some progress made with filter. A lot to be done, but make sure to pull this

--- a/views/borrowerDetails.ejs
+++ b/views/borrowerDetails.ejs
@@ -32,7 +32,7 @@
             <th>Collect date deadline</th>
         </tr>
     </thead>
-    <tbody id="all-reservations-table-body">
+    <tbody class="all-reservations-table-body">
         <% reservations.forEach(reservation=> { %>
             <% if (reservation.status != 'completed' && reservation.status != 'overdue') { %>
             <tr>
