--- a/views/includes/filterSearchReservation.ejs
+++ b/views/includes/filterSearchReservation.ejs
@@ -1,8 +1,8 @@
-<select name="reservationStatus" id="reservationStatus">
+<select name="reservationStatus" id="reservation-status">
     <option value="all">All</option>
     <option value="reserved">Reserved</option>
     <option value="collected">Collected</option>
-    <option value="complete">Complete</option>
+    <option value="completed">Completed</option>
     <option value="overdue">Overdue</option>
     <option value="cancelled">Cancelled</option>
 </select>
